--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
+    "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-simple-south-korea-map-chart": "^1.1.1",
